align input if list is empty; fix resend list and empty read

--- a/src/components/swarm-comment-system/swarm-comment-list/swarm-comment-list.scss
+++ b/src/components/swarm-comment-system/swarm-comment-list/swarm-comment-list.scss
@@ -15,4 +15,5 @@
   line-height: 20px;
   letter-spacing: 0.5%;
   color: #333333;
+  height: 100%;
 }
